# berserk_mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  agent_analytics.py  berserk_mcp.py  ingestion_advisor.py  ingestion_catalog.json  parser_factory.py  pyproject.toml  secret_scan.py
.github/workflows/: ci.yml
docs/: claude-code.md  fleet-controls-eval-2026-07-23.md  kql-performance-guide.md  security-review-2026-06-27.md
docs/releases/: v1.12.0.md  v1.14.0.md  v1.14.1.md  v1.15.0.md  v1.16.0.md  v1.17.0.md  v1.18.0.md  v1.18.1.md  v1.18.2.md  v1.19.0.md
evals/: model-eval-plan.md  now-vs-updated.md  pre-deploy-test-plan.md  results-2026-06-22.md  results-fleet-tuning-2026-07-23.md  router_cases.jsonl  run_eval.py
evals/fleet/: cache_sim.py  cooldown_sim.py  jitter_sim.py  latency_eval.py
evals/results/: cache_sim.json  cooldown_sim.json  jitter_sim.json  latency_eval.json  mock_mock-20260621-144748.json  mock_mock-20260723-113153.json
primers/: claude.md  soc.md  sre.md  windows-forensics.md
scripts/: hermes_tool_call_log.py
tests/: test_agent_analytics.py  test_berserk_mcp.py  test_fleet_evals.py  test_ingestion_advisor.py  test_parser_factory.py  test_phase3_tools.py  test_roles.py  test_routing_eval.py  test_secret_scan.py
