[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "berserk-mcp"
description = "An MCP server that answers Berserk observability questions through verified, deterministic KQL tools."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Simon Simonsen" }]
keywords = ["mcp", "model-context-protocol", "berserk", "observability", "kql", "telemetry", "otlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"]
dependencies = []  # stdlib only — by design

[project.urls]
Homepage = "https://github.com/ssi0202/berserk-mcp"
Issues = "https://github.com/ssi0202/berserk-mcp/issues"

[project.scripts]
berserk-mcp = "berserk_mcp:main"

[tool.setuptools]
py-modules = ["berserk_mcp"]

[tool.setuptools.dynamic]
version = { attr = "berserk_mcp.__version__" }
