[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "berserk-mcp"
description = "An MCP server that answers Berserk observability questions through verified, deterministic KQL tools."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Simon Simonsen" }]
keywords = ["mcp", "model-context-protocol", "berserk", "observability", "kql", "telemetry", "otlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dynamic = ["version"]
dependencies = []  # stdlib only — by design

[project.urls]
Homepage = "https://github.com/ssimonsen0202/berserk_mcp"
Issues = "https://github.com/ssimonsen0202/berserk_mcp/issues"

[project.scripts]
berserk-mcp = "berserk_mcp:main"

[tool.setuptools]
py-modules = ["berserk_mcp", "parser_factory", "agent_analytics", "secret_scan", "ingestion_advisor"]

[tool.setuptools.data-files]
"share/berserk-mcp" = ["ingestion_catalog.json"]
"share/berserk-mcp/primers" = ["primers/claude.md", "primers/soc.md", "primers/sre.md", "primers/windows-forensics.md"]

[tool.setuptools.dynamic]
version = { attr = "berserk_mcp.__version__" }
